Customized my map

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,7 +8,10 @@ website:
     left:
       - href: index.qmd
         text: Home
-      - about.qmd
+      - href: about.qmd
+        text: About Me
+      - href: resume.pdf
+        text: Resume
 
 format:
   html:
