working on blog

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -10,6 +10,8 @@ website:
         text: Home
       - href: about.qmd
         text: About Me
+      - href: posts.qmd
+        text: Blog
       - href: resume.pdf
         text: Resume
 
