--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ website:
       - icon: twitter
         href: https://twitter.com/Elke_Windschitl
       - icon: linkedin
-        href: https://www.linkedin.com/in/elke-windschitl-37a330149/
+        href: https://www.linkedin.com/in/elke-windschitl/
     left:
       - href: index.qmd
         text: Home
