--- a/_quarto.yml
+++ b/_quarto.yml
@@ -26,6 +26,8 @@ website:
         text: About Me
       - href: posts.qmd
         text: My Work
+      - href: gallery.qmd
+        text: Gallery
       - href: resume.qmd
         text: Resume
   page-footer: 
